add flake8 to the DEV environment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   app:
     build:
       context:
+      args:
+        - DEV=true # override the DEV arg in Dockerfile
     ports:
       -"8000:8000" # local port map to docker port
     volumes:
